[gd_scene load_steps=10 format=2]

[ext_resource path="res://Juegos/Niveles/Fondos/StarFieldBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juegos/Niveles/boton_icono.png" type="Texture" id=2]
[ext_resource path="res://Juegos/Niveles/Fonts/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juegos/Niveles/MenuVictoria.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1215, 49 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "volar"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1215, 1017 ), Vector2( 1215, -60 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "ganaste"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0235294, 0.00392157, 0.2, 1 ), Color( 0.443137, 0.0901961, 0.905882, 0.631373 ), Color( 1, 1, 1, 1 ), Color( 0.0823529, 0.0509804, 0.376471, 1 ) ]
}

[node name="MenuVictoria" type="Node"]
script = ExtResource( 4 )
menu_principal = "res://Juegos/Niveles/MenuPrincipal.tscn"

[node name="StarFieldBackground" parent="." instance=ExtResource( 1 )]

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -815.0
margin_top = -349.0
margin_right = 120.0
margin_bottom = -78.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
modulate = Color( 0.0235294, 0.00392157, 0.2, 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.0
margin_top = -56.5
margin_right = 378.0
margin_bottom = 56.5
custom_fonts/font = SubResource( 1 )
text = "GANASTE!!!"

[node name="BotonMenu" type="Button" parent="."]
margin_left = 1344.0
margin_top = 239.0
margin_right = 1722.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 2 )
text = "MENÃš"

[node name="BotonSalir" type="Button" parent="."]
margin_left = 1344.0
margin_top = 428.0
margin_right = 1722.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 2 )
text = "salir"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/volar = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1215, 49 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[node name="AnimationGanaste" type="AnimationPlayer" parent="."]
anims/ganaste = SubResource( 5 )

[connection signal="pressed" from="BotonMenu" to="." method="_on_BotonMenu_pressed"]
[connection signal="pressed" from="BotonSalir" to="." method="_on_BotonSalir_pressed"]
